Fixing spacing issues

--- a/css/game_sheet.css
+++ b/css/game_sheet.css
@@ -19,6 +19,8 @@
   left: 0;
   right: 0;
   text-align: center;
+  /* width:1920px;
+  height:1080px; */
 }
 
 .img-overlay:before {
